formating.css
body {
	background-color: black;
	margin: 0;
    padding: 0;
    overflow: hidden;
}

table {
	border: 2px dashed white;
	border-collapse: collapse;
	width: 100%;
}

td, th {
	border: 2px solid orange;
	text-align: center;
	padding: 3px;
	height: 50px;
}

tr {
	color: white;
}

input {
	padding: 2px;
	text-align: center;
	width: 85%;
}

h1 {
	color: red;
	font-family: Serif;
	font-size: 30px;
}

h2 {
	color: green;
	font-family: Serif;
	font-size: 30px;
}

h3 {
	color: yellow;
	font-family: Serif;
	font-size: 30px;
}

div {
	position: relative;
	left: 85%;
}

#row-fluid {
	position: relative;
	left: 0;
	width: 98%;
	/*border: 1px solid lime;*/
    text-align: center;
}

span {
	display: inline-block;
    background-color: #ff8;
}

span:first-child {
    background-color: green;
    float: left;
}

span:span:nth-child(2) {
	background-color: yellow;
	float: center;
}

span:last-child {
    background-color: red;
    float: right;
}

